Finally lots of updates. Windows article published!